# sinab

./: .Rbuildignore  .gitignore  .travis.yml  DESCRIPTION  LICENSE.md  NAMESPACE  README.Rmd  README.md  _pkgdown.yml  appveyor.yml
R/: grdtext-package.R  test.R  (+7 more)
src/mdlayout/: Cargo.toml  LICENSE-MIT  mdlayout.h
src/mdlayout/mdlayout-derive/: Cargo.toml  README
src/mdlayout/mdlayout-derive/src/: generic.rs  lib.rs
src/mdlayout/src/: c_helper.rs  geom.rs  hello.rs  layout.rs  layout2.rs  lib.rs  main.rs  markdown.rs  paint.rs  primitives.rs  renderer.rs  test.rs  text.rs
src/mdlayout/src/dom/: html.rs  mod.rs  xml.rs
src/mdlayout/src/graphics_engine/: font.rs  mod.rs  renderer.rs  shaped_segment.rs
src/mdlayout/src/layout/: dom_traversal.rs  element_data.rs  fragments.rs
src/mdlayout/src/layout/flow/: construct.rs  inline.rs  root.rs
src/mdlayout/src/style/: cascade.rs  mod.rs  properties.rs  selectors.rs  tests.rs  user_agent.css
src/mdlayout/src/style/properties/: definitions.rs  macros.rs  mod.rs
src/mdlayout/src/style/tests/: mod.rs  selectors.rs
src/mdlayout/src/style/values/: background.rs  box_.rs  fontfamily.rs  fonts.rs  length.rs  mod.rs  tests.rs
src/mdlayout/src/style2/: properties.rs
src/mdlayout/tests/: expand.rs
src/sinab/: Cargo.toml  NOTICE  sinab.h
src/sinab/sinab-derive/: Cargo.toml
src/sinab/sinab-derive/src/: generic.rs  lib.rs  style.rs
src/sinab/src/: geom.rs  layout2.rs  lib.rs  main.rs  markdown.rs  paint.rs  test.rs
src/sinab/src/graphics_engine/: font.rs  mod.rs  renderer.rs  shaped_segment.rs
src/sinab/src/layout/: dom_traversal.rs  fragments.rs  positioned.rs
src/sinab/src/style/: cascade.rs  declaration_block.rs  mod.rs  selectors.rs  user_agent.css
src/sinab/src/utils/: c_helper.rs  mod.rs
src/sinab/tests/: expand.rs
(+59 files in other folders)
