[package]
name = "mdlayout"
version = "0.1.0"
authors = ["Claus Wilke <wilke@austin.utexas.edu>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
libc = "0.2"
# The option `features = ["simd"]` enables SIMD-accelerated processing, see:
# https://github.com/raphlinus/pulldown-cmark/blob/master/README.md#build-options
pulldown-cmark = { version = "0.7", default-features = false, features = ["simd"] }
kuchiki = "0.8.0"
