[package]
name = "sinab"
version = "0.1.0"
authors = ["Claus Wilke <wilke@austin.utexas.edu>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
sinab-derive = { path = "sinab-derive", version = "0.1.0" }
libc = "0.2"
# The option `features = ["simd"]` enables SIMD-accelerated processing, see:
# https://github.com/raphlinus/pulldown-cmark/blob/master/README.md#build-options
pulldown-cmark = { version = "0.7", default-features = false, features = ["simd"] }
cssparser = "0.27.2"
html5ever = "0.25.1"
selectors = "0.22.0"
euclid = "0.20.14"
lazy_static = "1.4.0"
# matches = "0.1.8" ## needed?
smallbitvec = "2.5.0"
smallvec = "1.4.1"
